--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "license": "ISC",
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^20.10.6",
+        "@types/uuid": "^9.0.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -30,15 +35,10 @@
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.0",
+        "typescript": "^5.3.3",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/morgan": "^1.9.9",
-        "@types/node": "^20.10.6",
-        "@types/uuid": "^9.0.7",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.3.3"
+        "ts-node-dev": "^2.0.0"
     }
 }
